# CMakePythonVenv

./: CMakeLists.txt  CMakePythonVenv.cmake  LICENSE  README.md
main/: CMakePythonVenvMain.cmake  CMakePythonVenvSupport.cmake
test/: CMakeLists.txt  TestCreateVenvDuplicate.cmake  TestCreateVenvProcessFailure.cmake  TestCreateVenvWithName.cmake  TestCreateVenvWithoutArgs.cmake  TestEndToEnd.cmake  TestInstallPkgsFromReqFile.cmake  TestInstallPkgsFromReqFileProcessFailure.cmake  TestInstallPkgsWithNonExistentName.cmake  TestInstallPkgsWithoutArgs.cmake  TestInstallPkgsWithoutPackages.cmake
test/TestEndToEnd/: CMakeLists.txt
